refactor: StandardCharsets.UTF_8 리펙토링